video image scalable

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -60,7 +60,7 @@
          </layout>
         </item>
         <item>
-         <widget class="QLabel" name="videoLabel">
+         <widget class="AspectRatioPixmapLabel" name="videoLabel">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
             <horstretch>0</horstretch>
@@ -202,6 +202,13 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>AspectRatioPixmapLabel</class>
+   <extends>QLabel</extends>
+   <header>aspectratiopixmaplabel.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
