--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -84,6 +84,13 @@
            </widget>
           </item>
           <item>
+           <widget class="QPushButton" name="playTillNextTimestampPushButton">
+            <property name="text">
+             <string>Play timestamp</string>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QPushButton" name="nextImagePushButton">
             <property name="text">
              <string>Next image</string>
