--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -283,6 +283,7 @@
     </property>
     <addaction name="actionOpen"/>
     <addaction name="actionSave"/>
+    <addaction name="actionEditing_scripts"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -318,6 +319,14 @@
   <action name="actionAbout">
    <property name="text">
     <string>&amp;About</string>
+   </property>
+  </action>
+  <action name="actionEditing_scripts">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>&amp;Editing scripts</string>
    </property>
   </action>
  </widget>
