--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -283,7 +283,6 @@
     </property>
     <addaction name="actionOpen"/>
     <addaction name="actionSave"/>
-    <addaction name="actionEditing_scripts"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -291,7 +290,17 @@
     </property>
     <addaction name="actionAbout"/>
    </widget>
+   <widget class="QMenu" name="menuScripts">
+    <property name="title">
+     <string>Scripts</string>
+    </property>
+    <addaction name="action_Clear"/>
+    <addaction name="actionEdit"/>
+    <addaction name="actionNew"/>
+    <addaction name="separator"/>
+   </widget>
    <addaction name="menuOpen"/>
+   <addaction name="menuScripts"/>
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
@@ -321,12 +330,22 @@
     <string>&amp;About</string>
    </property>
   </action>
-  <action name="actionEditing_scripts">
+  <action name="actionEdit">
    <property name="checkable">
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>&amp;Editing scripts</string>
+    <string>&amp;Edit</string>
+   </property>
+  </action>
+  <action name="actionNew">
+   <property name="text">
+    <string>&amp;New</string>
+   </property>
+  </action>
+  <action name="action_Clear">
+   <property name="text">
+    <string>&amp;Clear</string>
    </property>
   </action>
  </widget>
