--- a/newscriptprofileform.ui
+++ b/newscriptprofileform.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ScriptEditor</class>
- <widget class="QDialog" name="ScriptEditor">
+ <class>NewScriptProfileForm</class>
+ <widget class="QDialog" name="NewScriptProfileForm">
   <property name="windowModality">
    <enum>Qt::ApplicationModal</enum>
   </property>
@@ -9,19 +9,29 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>445</width>
-    <height>333</height>
+    <width>238</width>
+    <height>95</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Script Editor</string>
-  </property>
-  <property name="modal">
-   <bool>true</bool>
+   <string>New script profile</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QTextEdit" name="textEdit"/>
+    <widget class="QLabel" name="label">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Profile name&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLineEdit" name="profileNameLineEdit"/>
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
@@ -40,7 +50,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>ScriptEditor</receiver>
+   <receiver>NewScriptProfileForm</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -56,7 +66,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>ScriptEditor</receiver>
+   <receiver>NewScriptProfileForm</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
