--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -342,6 +342,9 @@
    </property>
   </action>
   <action name="actionNew">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>&amp;New</string>
    </property>
