--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -10,6 +10,9 @@
     <height>361</height>
    </rect>
   </property>
+  <property name="acceptDrops">
+   <bool>true</bool>
+  </property>
   <property name="windowTitle">
    <string>Video Time Measure</string>
   </property>
